exports[`BpkSelect should render correctly 1`] = `
<select
  className="bpk-select"
  id="fruits"
  name="fruits"
  onChange={[Function onChange]}
  value="oranges">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "className" attribute 1`] = `
<select
  className="bpk-select test"
  id="fruits"
  name="fruits"
  onChange={[Function onChange]}
  value="oranges">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "docked" attribute 1`] = `
<select
  className="bpk-select bpk-select--docked"
  id="fruits"
  name="fruits"
  onChange={[Function onChange]}
  value="">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with "large" attribute 1`] = `
<select
  className="bpk-select bpk-select--large"
  id="fruits"
  name="fruits"
  onChange={[Function onChange]}
  value="">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;

exports[`BpkSelect should render correctly with a "valid" attribute equal to false 1`] = `
<select
  className="bpk-select bpk-select--invalid"
  id="fruits"
  name="fruits"
  onChange={[Function onChange]}
  value="oranges">
  <option
    value="apples">
    Apples
  </option>
  <option
    value="oranges">
    Oranges
  </option>
  <option
    value="pears">
    Pears
  </option>
  <option
    disabled={true}
    value="tomatos">
    Tomatos
  </option>
</select>
`;
